# VntApp

./: distribute_options.yaml  distributor.yaml  pubspec.yaml
.github/workflows/: Liunx.yml  test.yml  win7补丁.yml  编译Android.yml  编译WIndows.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
assets/: vnt.desktop
lib/: about_page.dart  main.dart  network_config_input_page.dart
lib/widgets/: custom_tooltip_text_field.dart
linux/: CMakeLists.txt
rust/: Cargo.toml  build.rs
rust/.cargo/: config  config.toml
rust/src/api/: vnt_api.rs
rust_builder/android/: build.gradle
